--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.31.0",
+    "sass": "^1.92.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.19",
     "web-vitals": "^2.1.4"
